fixed white space on bottom of page

--- a/css/main.css
+++ b/css/main.css
@@ -275,7 +275,7 @@ CONTACT
 }
 
 .contact-row{
-  margin: 30vh auto;
+  margin: 25vh auto;
 }
 
 .footer{
